Tweaked menu bar spacing w/ fixed width body

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
 }
 .top_menu-right {
 	float: right;
-	margin-right: 30%;
+	margin-right: 15%;
 }
 .top_menu-right a:link {
 	color: rgb(128, 128, 128);
